2013-04-08  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-13-04
	* diff-root: add an --error-mode switch to better customize when to
	  stop the diffing process.
	* M python/scripts/diff_root_files.py
	* M python/RootUtils.py

2013-03-29  Sebastien Binet  <binet@lxplus434.cern.ch>

	* tagging PyUtils-00-13-03
	* fixing (part of) bug #100920: use rstrip to remove unwanted stray NULLs
	* M python/AthFile/impl.py

2013-02-28  Frank Winklmeier  <fwinkl@cern>
	
	* tagging PyUtils-00-13-02
	* python/scripts/tc_submit_tag.py: All authentication handled by
	pyAMI directly (remove --user and --password command line args)

2013-02-26  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-13-01
	* more pyami-4 fixes
	* M python/scripts/tc_submit_tag.py

2013-02-25  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-13-00
	* amilib: migrate to PyAmi-4
	* M python/AmiLib.py
	* M python/scripts/tc_show_clients.py

2013-02-19  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-27
	* adding aliases for commands
	* M wscript

2013-01-21  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-26
	* adding wscript file
	* A wscript

2013-01-14  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-25
	* appease checkreq (and list use-pkgs with -no_auto_imports)
	* M python/WorkAreaLib.py

2012-12-10 Ilija Vukotic <ivukotic@cern.ch>

	* initial import of isDSinFAX.py
	* tagging PyUtils-00-12-24

2012-11-30  Sebastien Binet  <binet@voatlas04.cern.ch>

	* tagging PyUtils-00-12-23
	* temporarily suppress dict-dup error for RooStats
	* M bin/checkPlugins.py

2012-10-31  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-22
	* bug #94500: pass a space-separated list of files to AtlCopyBSEvent
	* M python/scripts/filter_files.py

2012-10-26  Sebastien Binet  <binet@voatlas04.cern.ch>

	* tagging PyUtils-00-12-21
	* adds --debug switch to printout more infos
	* M bin/dump-athfile.py

	* tagging PyUtils-00-12-20